fixed z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -42,7 +42,7 @@ header nav {
   top: 80px;
   bottom: 0;
   right: 0;
-  z-index: 1;
+  z-index: 3;
   padding: 20px;
   overflow: hidden;
   background-color: #2a3d8c;
@@ -58,11 +58,12 @@ header nav {
 
 .overlayMenu {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   top: 80px;
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 2;
 }
 
 header nav a {
